<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/modn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/modules"
            android:textSize="34sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#90E8F5E9"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvC203"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/tv203"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#90E8F5E9"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvC206"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv206"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#90E8F5E9"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvC218"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv218"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#90E8F5E9"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvC235"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv235"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#90E8F5E9"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvC346"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv346"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
    </LinearLayout>



</LinearLayout>
